@@ -308,6 +308,7 @@ setGeneric("rawMat", function(object, ...) standardGeneric("rawMat"))
 setGeneric("rawMZ", function(object, ...) standardGeneric("rawMZ"))
 setGeneric("refineChromPeaks", function(object, param, ...)
     standardGeneric("refineChromPeaks"))
+setGeneric("removeIntensity", function(object, ...) standardGeneric("removeIntensity"))
 setGeneric("response", function(object) standardGeneric("response"))
 setGeneric("response<-", function(object, value) standardGeneric("response<-"))
 setGeneric("retcor", function(object, ...) standardGeneric("retcor"))
