@@ -39,3 +39,13 @@ test_that("findChromPeaks,Chromatogram,CentWaveParam works", {
     expect_equal(res[, "maxo"], res_2[1:2, "maxo"])
     expect_equal(res[, "into"], res_2[1:2, "into"])
 })
+
+test_that("removeIntensity,Chromatogram works", {
+    chr <- Chromatogram(rtime = c(1, 2, 3, 4, 5, 6, 7),
+                        intensity = c(NA_real_, 13, 16, 22, 34, 15, 6))
+    res <- removeIntensity(chr)
+    expect_equal(chr, res)
+    res <- removeIntensity(chr, threshold = 20)
+    expect_equal(intensity(res), c(NA_real_, NA_real_, NA_real_, 22, 34,
+                                   NA_real_, NA_real_))
+})
